hphp/test/slow/include-error4.php.expectf

Fatal error: require_once(non-existing-file.php): File not found in %s/include-error4.php on line 2
